hw05_auth/deployments/kubernetes/deployment_auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment-auth
  labels:
    app: users-service-auth
spec:
  selector:
    matchLabels:
      app: users-service-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: users-service-auth
    spec:
      containers:
        - name: users-service-auth
          image: julinserg/auth_service_auth_docker_image:latest
          ports:
            - containerPort: 9000
