hw05_auth/deployments/kubernetes/service_auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-auth
  labels:
    app: users-service-auth
spec:
  selector:
    app: users-service-auth
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: auth
      port: 9000
      targetPort: 9000
