hw05_auth/deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8090
