hw05_auth/deployments/kubernetes/ingress_auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress-auth
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: users-service-auth
                port:
                  number: 9000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: users-service-auth
                port:
                  number: 9000
          - path: /signin
            pathType: Prefix
            backend:
              service:
                name: users-service-auth
                port:
                  number: 9000
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: users-service-auth
                port:
                  number: 9000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: users-service-auth
                port:
                  number: 9000
